setup initial elements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-
-
+<body>
+  <div class="container">
+    <header class="header">
+      Header
+    </header>
+    <div class="content">
+      <nav class="sidebar">
+        Navigation
+      </nav>
+      <main class="form-view">
+        Stock Form
+      </main>
+    </div>
+  </div>
+</body>
