--- a/src/_base.scss
+++ b/src/_base.scss
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #ff3366;
-  --color-primary-dark: #ba265d;
+  --color-primary: #fdf0c4;
+  --color-primary-light: #f7a992;
+  --color-primary-dark: #82a0c2;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
