added the basis for the form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <body>
   <div class="container">
     <header class="header">
-      Header
+      <mat-toolbar color="warn">Stock Template Form</mat-toolbar>
     </header>
     <div class="content">
       <nav class="sidebar">
         Navigation
       </nav>
       <main class="form-view">
-        Stock Form
+        <app-stock-form></app-stock-form>
       </main>
     </div>
   </div>
