--- a/src/app/stock-form/stock-form.component.html
+++ b/src/app/stock-form/stock-form.component.html
@@ -1,24 +1,33 @@
 <mat-card>
-  <form (submit)="onAddStockForm(stockForm)" #stockForm="ngForm">
+  <form #stockForm="ngForm" (ngSubmit)="onAddStockForm(stockForm)">
     <h3>Please Enter a Stock Symbol</h3>
     <mat-form-field hintLabel="Enter a Stock Symbol" appearance="fill">
       <mat-label>Enter a stock symbol</mat-label>
       <input
         matInput
         type="text"
-        name="symbol"
-        ngModel
+        name="theSymbol"
+        [(ngModel)]="stockSymbol.stockSymbol"
         required
-        #symbol="ngModel"
+        #theSymbol="ngModel"
         placeholder="Ex. AAPL"
         minlength="1"
         maxlength="5"
       />
-      <mat-hint align="end">{{ symbol.value?.length || 0 }}/ 5</mat-hint>
-      <mat-error *ngIf="symbol.invalid">Please enter a stock symbol</mat-error>
+      <mat-hint align="end">{{ theSymbol.value?.length || 0 }}/ 5</mat-hint>
+      <mat-error *ngIf="theSymbol.invalid"
+        >Please enter a stock symbol</mat-error
+      >
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="!stockForm.valid"
+    >
       Search Symbol
     </button>
   </form>
 </mat-card>
+
+<div>{{ stockSymbol | json }}</div>
